# cpu-consumer

./: CMakeLists.txt  README.md  main.cpp
