CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(cpu-consumer)

SET(Boost_USE_STATIC_LIBS        ON) # only find static libs
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE(Boost 1.56 COMPONENTS thread date_time system chrono)
FIND_PACKAGE(OpenMP)

SET(TARGET_NAME cpu-consumer)
ADD_EXECUTABLE(${TARGET_NAME} main.cpp)

IF(Boost_FOUND)
    TARGET_COMPILE_DEFINITIONS(${TARGET_NAME} PRIVATE "-DHAVE_BOOST" ${Boost_LIB_DIAGNOSTIC_DEFINITIONS})
    TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(${TARGET_NAME} LINK_PRIVATE ${Boost_LIBRARIES})
ELSEIF(OPENMP_FOUND)
    TARGET_COMPILE_DEFINITIONS(${TARGET_NAME} PRIVATE "-DHAVE_OPENMP")
    TARGET_COMPILE_OPTIONS(${TARGET_NAME} PRIVATE ${OpenMP_CXX_FLAGS})
ELSE()
    MESSAGE(FATAL_ERROR "Boost 1.56+ or OpenMP not found.")
ENDIF()
